BUG: 285611

add a check for cases when markup elemets in TM suggestion and <source> differ.

thank you for reporting the crash, Andrew!
Please fell free to reopen this bug or fill another ones if new issues are coming ;)


svn path=/trunk/KDE/kdesdk/lokalize/; revision=1265781